--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({text, big}) {
-      console.log(text);
-      return <button style={{
+    function Btn({text, changeValue}) {
+      return <button 
+      onClick={changeValue}
+      style={{
         backgroundColor: "tomato",
         color:"white",
         padding:"10px, 20px",
         border: 0,
         borderRadius:10,
-        fontSize: big ? 18 : 16,
       }}>
       {text}</button>;
     }
+    const MemorizeBtn = React.memo(Btn);
     function App() {
+      const [value, setValue] = React.useState("Save Chnages");
+      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <Btn text="Save Changes" big={true} />
-          <Btn text="Continue" big={false} />
+          <Btn text={value} changeValue={changeValue} />
+          <Btn text="Continue" />
         </div>
       );
     }
